# smoothing_algorithms

./: README.md  pyproject.toml  requirements.txt  smoothing_algorithms.py  smoothing_code.ipynb
python/: plot.py
smoothing_lib/: histogram_smoothing.py  plot.py  smoothing_api.py
src/: statistics_utils.py
src/hist_smooth/: __init__.py  base_smoothing.py  grid_plot_hist.py  histogram_smoothing.py  plot.py  smoothing_api.py  tukey_smoothing.py
