[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hist-smooth"
version = "0"
description = "A great package."
readme = "README.md"

authors = [
  { name = "Roman", email = "petrov.romash@gmail.com" },
]
requires-python = ">=3.9"

dependencies = [
  "hist[plot,fit]",
]

[project.urls]
Homepage = "https://github.com/pingmar/smoothing_algorithms"

[tool.hatch.build]
sources = ["src"]